RESOLVED FIXED108059
[Qt][EFL][WebGL] Webgl doesn't work on nvidia cards.
https://bugs.webkit.org/show_bug.cgi?id=108059
Summary [Qt][EFL][WebGL] Webgl doesn't work on nvidia cards.
Viatcheslav Ostapenko
Reported 2013-01-28 00:21:59 PST
WebGL canvas is not rendered on some nvidia cards.
Attachments
WIP patch (22.49 KB, patch)
2013-01-28 00:23 PST, Viatcheslav Ostapenko
no flags
WIP patch2 (20.11 KB, patch)
2013-02-04 08:34 PST, Viatcheslav Ostapenko
no flags
Patch (2.89 KB, patch)
2013-02-04 11:47 PST, Viatcheslav Ostapenko
no flags
Viatcheslav Ostapenko
Comment 1 2013-01-28 00:23:04 PST
Created attachment 184944 [details] WIP patch Use 2 single buffer windows instead of one double buffer.
Viatcheslav Ostapenko
Comment 2 2013-02-04 08:34:10 PST
Created attachment 186385 [details] WIP patch2 Works on nvidia/ATI fglrx On mesa doesn't create canvases with alpha.
Zeno Albisser
Comment 3 2013-02-04 08:42:14 PST
(In reply to comment #2) > Works on nvidia/ATI fglrx > On mesa doesn't create canvases with alpha. I applied the patch locally, but I still only get a black canvas. So I'm afraid, this is not the right fix either.
Early Warning System Bot
Comment 4 2013-02-04 08:45:10 PST
Comment on attachment 186385 [details] WIP patch2 Attachment 186385 [details] did not pass qt-wk2-ews (qt): Output: http://queues.webkit.org/results/16371276
EFL EWS Bot
Comment 5 2013-02-04 08:46:22 PST
Comment on attachment 186385 [details] WIP patch2 Attachment 186385 [details] did not pass efl-ews (efl): Output: http://queues.webkit.org/results/16376190
Viatcheslav Ostapenko
Comment 6 2013-02-04 11:47:51 PST
WebKit Review Bot
Comment 7 2013-02-05 01:08:55 PST
Comment on attachment 186426 [details] Patch Clearing flags on attachment: 186426 Committed r141870: <http://trac.webkit.org/changeset/141870>
WebKit Review Bot
Comment 8 2013-02-05 01:08:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.