[Qt][EFL][WebGL] Webgl doesn't work on nvidia cards https://bugs.webkit.org/show_bug.cgi?id=108059

Patch by Viatcheslav Ostapenko <sl.ostapenko@samsung.com> on 2013-02-05
Reviewed by Kenneth Rohde Christiansen.

Commit r138327 fixed repainting issues on mesa3d GL library by re-binding
texture to the window after every glXSwapBuffer. Unfortunatelly re-bind
breaks rendering on NVidia cards with NVidia propiertary drivers.
This change limits texture re-binding only for mesa3d GL library.

No new tests. HW specific fix.

* platform/graphics/surfaces/glx/GraphicsSurfaceGLX.cpp:
(WebCore::OffScreenRootWindow::isMesaGLX):
(OffScreenRootWindow):
(WebCore::GraphicsSurface::platformSwapBuffers):

Canonical link: https://commits.webkit.org/127129@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141870 268f45cc-cd09-0410-ab3c-d52691b4dbfc